<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:padding="25dp">

 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="140dp"
     android:src="@drawable/menu"
     android:contentDescription="@string/te">
 </ImageView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quienes_somos"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="quienes">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servicios_y_paquetes"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="servicios">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscripci_n"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="suscripciones">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/citas"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="citas">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instalaciones"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="instalaciones">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galeria"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="galeria">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ofertas"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="ofertas">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metodo_de_pago"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="metodopago">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/white"
        android:textColor="@color/anaranjado"
        android:onClick="contacto">
    </Button>
</LinearLayout>