<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logoanaranjado"
        android:contentDescription="@string/te" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="30sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TextView>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColorHint="@color/anaranjado"
        android:layout_margin="20dp"
        android:hint="@string/nombre_de_usuario"
        android:gravity="center"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColorHint="@color/anaranjado"
        android:layout_margin="20dp"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/anaranjado"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/olvido_su_contrase_a"
        android:gravity="center"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:backgroundTint="@color/anaranjado"
        android:text="@string/ingresar" />
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/anaranjado"
        android:layout_marginRight="20dp"
        android:text="@string/registrarse" />


</LinearLayout>