<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:padding="20dp"
    tools:context=".ActivityInstalaciones">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/te"
        android:src="@drawable/galeria">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/er"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="10dp">
    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img5"
        android:padding="15dp"
        android:contentDescription="@string/te">
    </ImageView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img6"
        android:padding="15dp"
        android:contentDescription="@string/se">
    </ImageView>


</LinearLayout>